--- a/src/styles/elements/main.module.scss
+++ b/src/styles/elements/main.module.scss
@@ -41,9 +41,13 @@
 }
 
 .link {
-    @include colorText();
+    color: map-get($palette, accents);
     text-decoration: none;
     cursor: pointer;
+    
+    &:hover {
+        text-decoration: underline;
+    }
 }
 
 .linkContent {
